Update/Create 2018-10-19-B.md

--- a/2018-10-19-B.md
+++ b/2018-10-19-B.md
@@ -1,8 +1,7 @@
 ---
-title: B
+title: 2018-10-19-B
 layout: post
 author: memes.ligma
-permalink: /b/
 tags:
 - blog
 source-id: 1PDnMbDj3hmwQ_HGll2PAveOGYy3-aNwuD_NLxyOnM0E
@@ -12,5 +11,5 @@ Markdown document
 
 # Heading
 
-I plan to wrtie about many things and address complex topics in this blog of mine
+I plan to write about many things and address complex topics in this blog of mine
 
