Update/Create 2018-10-19-B.md

--- a/2018-10-19-B.md
+++ b/2018-10-19-B.md
@@ -11,5 +11,17 @@ Markdown document
 
 # Heading
 
-I plan to write about many things and address complex topics in this blog of mine
+I plan to write about many things and address complex topics in this blog of mine. This is a pretty interesting document that I must post on to my blog.
+
+<table>
+  <tr>
+    <td>1</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>4</td>
+  </tr>
+</table>
+
 
