--- a/2019-02-19-Docs-API.md
+++ b/2019-02-19-Docs-API.md
@@ -12,3 +12,9 @@ Google Docs API
 
 This is the Google Docs API quickstart with Python 3.
 
+# This is a heading 1
+
+Here little heading
+
+## This is a heading two
+
