Update/Create 2019-02-19-Docs-API.md

--- a/2019-02-19-Docs-API.md
+++ b/2019-02-19-Docs-API.md
@@ -18,7 +18,7 @@ Here little heading
 
 ## This is a heading two
 
-Take some content for that!![image alt text]({{ site.url }}/public/i4QUrt65rfRLwevDkr0esA_img_0.png)
+Take some content for that!
 
 Lets try an image too!
 
